Comments, Dynamic View Changes, Bug Fixes
Added comments to some files.
Made the auto-logout/run code happen every 15 mins up from 10 mins. Polished review_exams some more.
Moved database calls out of the grades view to the controller.
Polished turtle behavior in dynamic view.
Made canvas clear when area is resized with scrollbar.
Set min value of scroll to 1 so the turtle never goes away fully. This fixed a bug where if there was no drawable area and the user tried to import turtle, it would throw an error.
Cleaned exam_grades_for_student view up.
Hardcoded a check for scores of 0.5 to set them as 0 so grades would display the same for the teacher/ta and student.
Added left_subtitle to dynamic view.
Added a way to set which dropdown items content is shown on page load.

--- a/pppio_dev/css/site.css
+++ b/pppio_dev/css/site.css
@@ -180,11 +180,14 @@ span.code {
     background-color: #4CAF50;
     color: white;
     padding: 16px;
-    font-size: 16px;
+    font-size: 12px;
     border: none;
     cursor: pointer;
     width: 100%;
     border-radius: 5%;
+    height: 75px;
+    min-height: 75px;
+    max-height: 75px;
 }
 
 .dropdown {
@@ -194,7 +197,7 @@ span.code {
 
 .dropdown-content {
     display: none;
-    position: absolute;
+    position: relative;
     background-color: #f9f9f9;
     z-index: 999;
 }
